Update db models

--- a/WebApp/Views/Job/ViewJob.cshtml
+++ b/WebApp/Views/Job/ViewJob.cshtml
@@ -125,7 +125,7 @@
                     <li class="flex items-center gap-3">
                         <i class="fa fa-clock-o text-xl"></i>
                         <strong class="pl-1 pr-1">@Html.DisplayNameFor(model => model.Schedule):</strong>
-                        <text>@Model.Schedule.Days Days, @Model.Schedule.Hours Hours</text>
+                        <text>@Model.Schedule.Days, @Model.Schedule.Hours</text>
                     </li>
                     <li class="flex items-center gap-3">
                         <i class="fas fa-money-bill-wave text-xl"></i>
