--- a/WebApp/Views/Account/_RegisterModal.cshtml
+++ b/WebApp/Views/Account/_RegisterModal.cshtml
@@ -5,7 +5,7 @@
         <div class="modal-content">
             <!-- Modal Header -->
             <div class="modal-header">
-                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="registerUserModalLabel">Create Account</h5>
+                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="registerUserModalLabel">Create Accounts</h5>
                 <button type="button" class="close text-gray-500 hover:text-gray-700" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
