--- a/WebApp/Views/Job/Index.cshtml
+++ b/WebApp/Views/Job/Index.cshtml
@@ -37,8 +37,8 @@
     <div class="flex items-center">
         <form method="get" asp-action="@aspAction" asp-route-sortBy="@sortBy" asp-route-search="@search" asp-route-pageIndex="@pageIndex" class="flex items-center">
             <div class="flex">
-                <input type="text" name="Search" class="form-control btn-radius rounded-l-md border border-gray-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Job title, position, keywords..." value="@search" />
-                <button type="submit" class="btn btn-primary btn-radius-r rounded-r-md bg-blue-500 px-3 py-2 text-white hover:bg-blue-600">
+                <input type="text" name="Search" class="form-control btn-radius rounded-l-md border border-gray-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Job title, position, keywords..." value="@search" style="margin-right: 10px;" />
+                <button type="submit" class="rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]">
                     <i class="fa fa-search"></i>
                 </button>
             </div>
