--- a/WebApp/Views/Company/Index.cshtml
+++ b/WebApp/Views/Company/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "All Companies";
     await Html.RenderPartialAsync("_AddCompanyModal", new Services.ServiceModels.CompanyViewModel());
-    await Html.RenderPartialAsync("_DeleteModal"); 
+    await Html.RenderPartialAsync("_DeleteModal");
 
     string aspAction = "GetAllCompanies";
 
@@ -22,9 +22,9 @@
     <div class="flex items-center">
         <form method="get" asp-action="@aspAction" asp-route-sortBy="@sortBy" asp-route-search="@search" class="flex items-center">
             <div class="flex">
-                <input type="text" name="search" class="form-control btn-radius rounded-l-md border border-gray-300 px-3 py-2 hover:border-[#991b1b] focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Company name" value="@search" />
-                <button type="submit" class="btn btn-primary btn-radius-r rounded-r-md bg-[#7A1515] px-3 py-2 text-white hover:border-[#991b1b]">
-                    <i class="fa fa-search"></i>
+                <input type="text" name="search" class="form-control btn-radius rounded-l-md border border-[#7A1515] bg-white text-gray-800 px-4 py-2 shadow-sm focus:outline-none focus:ring-2 focus:ring-[#A53D3D] hover:border-[#A53D3D] transition duration-300 ease-in-out" placeholder="Company name" value="@search" style="margin-right: 10px;" />
+                <button type="submit" class="rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]">
+                <i class="fa fa-search"></i>
                 </button>
             </div>
             <input type="hidden" name="sortBy" value="@sortBy" />
@@ -32,7 +32,7 @@
         @if (User.IsInRole("NLO"))
         {
             <div class="mx-3">
-                <button type="button" class="btn btn-primary btn-radius rounded-md bg-blue-500 px-3 py-2 text-white hover:bg-blue-600" data-toggle="modal" data-target="#addCompanyModal">
+                <button type="button" class="rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]" data-toggle="modal" data-target="#addCompanyModal">
                     <i class="fa fa-plus"></i>
                     Add Company
                 </button>
@@ -42,108 +42,41 @@
 </div>
 
 <div class="container-fluid px-4 py-3">
-    <table class="table-white table min-w-full divide-y divide-gray-200">
+    <table class="table-auto min-w-full divide-y divide-gray-200 text-center shadow-lg">
         <thead class="bg-gray-50">
             <tr>
-                <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
-                    <a asp-action="@aspAction" asp-route-sortBy="@sortByName" asp-route-search="@search" asp-route-pageIndex="@pageIndex" asp-route-verified="@verified" asp-route-hasValidMOA="@hasValidMOA" class="text-black hover:text-blue-500">
-                        @Html.DisplayNameFor(model => model.First().Name)
-                        @(string.IsNullOrEmpty(sortBy) ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (sortBy == "name_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
-                    </a>
+                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
+                    @Html.DisplayNameFor(model => model.First().Name)
+                    @(string.IsNullOrEmpty(sortBy) ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (sortBy == "name_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
                 </th>
-                <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
+                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
                     @Html.DisplayNameFor(model => model.First().ContactEmail)
                 </th>
-                <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
+                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
                     @Html.DisplayNameFor(model => model.First().ContactNumber)
                 </th>
-                <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
+                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
                     @Html.DisplayNameFor(model => model.First().Address)
                 </th>
-                <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
-                    <a asp-action="@aspAction" asp-route-sortBy="@sortByActiveListings" asp-route-search="@search" asp-route-pageIndex="@pageIndex" asp-route-verified="@verified" asp-route-hasValidMOA="@hasValidMOA" class="text-black hover:text-blue-500">
-                        @Html.DisplayNameFor(model => model.First().ActiveJobListings)
-                        @(string.Equals(sortBy, "jobs") ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (string.Equals(sortBy, "jobs_desc") ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
-                    </a>
+                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
+                    @Html.DisplayNameFor(model => model.First().ActiveJobListings)
                 </th>
-                <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
-                    <div class="dropdown relative">
-                        <a class="cursor-pointer text-black hover:text-blue-500" href="#" id="verifiedDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            @if (!verified.HasValue)
-                            {
-                                @Html.DisplayNameFor(model => model.First().IsVerified)
-                            }
-                            else
-                            {
-                                <text>@(verified == true ? "Verified" : "Unverified")</text>
-                            }
-                            <i class="fa-solid fa-chevron-down"></i>
-                        </a>
-                        <div class="dropdown-menu absolute hidden pt-1 text-gray-700" aria-labelledby="verifiedDropdown">
-                            <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100"
-                               asp-action="@aspAction"
-                               asp-route-sortBy="@sortBy"
-                               asp-route-search="@search"
-                               asp-route-hasValidMOA="@hasValidMOA"
-                               asp-route-verified="">All</a>
-                            <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100"
-                               asp-action="@aspAction"
-                               asp-route-sortBy="@sortBy"
-                               asp-route-search="@search"
-                               asp-route-hasValidMOA="@hasValidMOA"
-                               asp-route-verified="true">Verified</a>
-                            <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100"
-                               asp-action="@aspAction"
-                               asp-route-sortBy="@sortBy"
-                               asp-route-search="@search"
-                               asp-route-hasValidMOA="@hasValidMOA"
-                               asp-route-verified="false">Unverified</a>
-                        </div>
-                    </div>
+                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
+                    @Html.DisplayNameFor(model => model.First().IsVerified)
                 </th>
-                <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
-                    <div class="dropdown relative">
-                        <a class="cursor-pointer text-black hover:text-blue-500" href="#" id="verifiedDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            @if (!hasValidMOA.HasValue)
-                            {
-                                @Html.DisplayNameFor(model => model.First().HasValidMOA)
-                            }
-                            else
-                            {
-                                <text>@(hasValidMOA == true ? "With MOA" : "No MOA")</text>
-                            }
-                            <i class="fa-solid fa-chevron-down"></i>
-                        </a>
-                        <div class="dropdown-menu absolute hidden pt-1 text-gray-700" aria-labelledby="verifiedDropdown">
-                            <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100"
-                               asp-action="@aspAction"
-                               asp-route-sortBy="@sortBy"
-                               asp-route-search="@search"
-                               asp-route-hasValidMOA=""
-                               asp-route-verified="@verified">All</a>
-                            <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100"
-                               asp-action="@aspAction"
-                               asp-route-sortBy="@sortBy"
-                               asp-route-search="@search"
-                               asp-route-hasValidMOA="true"
-                               asp-route-verified="@verified">With MOA</a>
-                            <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100"
-                               asp-action="@aspAction"
-                               asp-route-sortBy="@sortBy"
-                               asp-route-search="@search"
-                               asp-route-hasValidMOA="false"
-                               asp-route-verified="@verified">No MOA</a>
-                        </div>
-                    </div>
+                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
+                    @Html.DisplayNameFor(model => model.First().HasValidMOA)
                 </th>
-                <th class="px-6 py-3"></th>
+                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
+                    Actions
+                </th>
             </tr>
         </thead>
-        <tbody class="divide-y divide-gray-200 bg-white">
+        <tbody class="bg-white divide-y divide-gray-200">
             @if (!Model.Any())
             {
                 <tr>
-                    <td colspan="13" class="whitespace-nowrap px-6 py-4 text-center text-sm text-gray-500">
+                    <td colspan="8" class="whitespace-nowrap px-6 py-4 text-center text-sm text-gray-500">
                         @(string.IsNullOrEmpty(search) ? Html.Raw("No companies found") : Html.Raw("No companies found matching the criteria"))
                     </td>
                 </tr>
@@ -152,53 +85,20 @@
             {
                 @foreach (var item in Model)
                 {
-                    @*await Html.RenderPartialAsync("_EditUserModal", item);*@
-                    <tr>
+                    <tr class="hover:bg-gray-100 transition duration-300 ease-in-out">
+                        <td class="whitespace-nowrap px-6 py-4">@Html.DisplayFor(modelItem => item.Name)</td>
+                        <td class="whitespace-nowrap px-6 py-4">@Html.DisplayFor(modelItem => item.ContactEmail)</td>
+                        <td class="whitespace-nowrap px-6 py-4">@Html.DisplayFor(modelItem => item.ContactNumber)</td>
+                        <td class="whitespace-nowrap px-6 py-4">@Html.DisplayFor(modelItem => item.Address)</td>
+                        <td class="whitespace-nowrap px-6 py-4">@Html.DisplayFor(modelItem => item.ActiveJobListings)</td>
                         <td class="whitespace-nowrap px-6 py-4">
-                            @Html.DisplayFor(modelItem => item.Name)
+                            @if (item.IsVerified) { <span>&#10004;</span> } else { <span>&#10006;</span> }
                         </td>
                         <td class="whitespace-nowrap px-6 py-4">
-                            @Html.DisplayFor(modelItem => item.ContactEmail)
+                            @if (item.HasValidMOA) { <span>&#10004;</span> } else { <span>&#10006;</span> }
                         </td>
                         <td class="whitespace-nowrap px-6 py-4">
-                            @Html.DisplayFor(modelItem => item.ContactNumber)
-                        </td>
-                        <td class="whitespace-nowrap px-6 py-4">
-                            @Html.DisplayFor(modelItem => item.Address)
-                        </td>
-                        <td class="whitespace-nowrap px-6 py-4">
-                            @Html.DisplayFor(modelItem => item.ActiveJobListings)
-                        </td>
-                        <td class="whitespace-nowrap px-6 py-4">
-                            @if (item.IsVerified)
-                            {
-                                <span>&#10004;</span>
-                            }
-                            else
-                            {
-                                <span>&#10006;</span>
-                            }
-                        </td>
-                        <td class="whitespace-nowrap px-6 py-4">
-                            @if (item.HasValidMOA)
-                            {
-                                <span>&#10004;</span>
-                            }
-                            else
-                            {
-                                <span>&#10006;</span>
-                            }
-                        </td>
-                        <td>
-                            @Html.ActionLink("", "GetCompany", new
-                                {
-                                    id = item.CompanyId,
-                                    sortBy = sortBy,
-                                    verified = verified,
-                                    hasValidMOA = hasValidMOA,
-                                    search = search,
-                                    pageIndex = Model.PageIndex
-                                }, new { @class = "fas fa-info-circle action-icon" }) |
+                            @Html.ActionLink("", "GetCompany", new { id = item.CompanyId }, new { @class = "fas fa-info-circle action-icon" }) |
                             @Html.ActionLink("", "GetCompany", new { id = item.CompanyId, showModal = "editCompany" }, new { @class = "fas fa-edit action-icon" }) |
                             <button type="button" onclick="displayDeleteModal('@item.CompanyId', '@item.Name')" class="action-icon mx-1">
                                 <i class="fa fa-archive" aria-hidden="true"></i>
@@ -211,7 +111,8 @@
         </tbody>
     </table>
 
-    <nav class="mt-4 flex justify-end">
+
+    <nav class="mt-4 flex justify-center">
         <ul class="pagination flex items-center">
             @if (Model.HasPreviousPage)
             {
@@ -233,6 +134,7 @@
             }
         </ul>
     </nav>
+
 </div>
 
 <!-- Values passed to the js files -->
