--- a/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/WebApp/Views/Shared/_Sidebar.cshtml
@@ -8,10 +8,10 @@
     var userId = HttpContextAccessor.HttpContext.User.FindFirst(System.Security.Claims.ClaimTypes.NameIdentifier)?.Value;
     bool hasUnreadNotifications = false;
     int notificationCount = 0;
-    var role = HttpContextAccessor.HttpContext.User.FindFirst(System.Security.Claims.ClaimTypes.Role)?.Value;
+    var role = HttpContextAccessor.HttpContext.User.FindFirst(System.Security.Claims.ClaimsIdentity.DefaultRoleClaimType)?.Value;
 }
 
-<div class="@((ViewBag.LoginView == true || ViewBag.create == true) ? "hide-navbar" : "sidebar")">
+<div class="bg-[#F5F7F8] @((ViewBag.LoginView == true || ViewBag.create == true) ? "hide-navbar" : "sidebar")">
     <div class="cursor-pointer">
         <img src="~/img/logo1.png"
              class="w-48"
@@ -19,42 +19,53 @@
              onclick="window.location.href = '@(isRecruiter ? Url.Action("GetAllJobsRecruiter", "Job") : Url.Action("Dashboard", "Home"))';">
     </div>
     <div class="mb-2 mt-5 font-semibold text-gray-700">Navigation</div>
-    <ul class="flex-grow list-none">
+    <ul class="flex-grow list-none text-[#7A1515]">
         @if (isAdmin || isSuper)
         {
-            <li class="py-2 text-[#7A1515]">
-                <a asp-action="Dashboard" asp-controller="Home" class="flex items-center rounded px-2 py-1 text-[#7A1515] hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Home" ? "bg-gray-200" : "")">
-                    <i class="fa fa-area-chart mr-2 text-[#7A1515]"></i>
+            <li class="py-2">
+                <a asp-action="Dashboard" asp-controller="Home"
+                   class="flex items-center rounded px-2 py-1 text-[#7A1515]
+                    hover:text-[#991b1b] hover:bg-gray-200 transition duration-200">
+                    <i class="fa fa-area-chart mr-2"></i>
                     Dashboard
                 </a>
+
             </li>
         }
         @if (isSuper)
         {
-            <li class="py-2 text-[#7A1515]">
-                <a asp-action="GetAllUsers" asp-controller="User" class="flex items-center rounded px-2 py-1 text-[#7A1515] hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "User" ? "bg-gray-200" : "")">
-                    <i class="fa fa-users mr-2 text-[#7A1515]"></i>
+            <li class="py-2">
+                <a asp-action="GetAllUsers" asp-controller="User"
+                   class="flex items-center rounded px-2 py-1 text-[#7A1515]
+                   hover:text-[#991b1b] hover:bg-gray-200 transition duration-200">
+                    <i class="fa fa-users mr-2"></i>
                     Users
                 </a>
             </li>
         }
         @if (isAdmin && !isSuper)
         {
-            <li class="py-2 text-[#7A1515]">
-                <a asp-action="GetAllCompanies" asp-controller="Company" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 text-[#7A1515]@(ViewContext.RouteData.Values["Controller"].ToString() == "Company" ? "bg-gray-200" : "")">
-                    <i class="fa fa-building mr-2 text-[#7A1515]"></i>
+            <li class="py-2">
+                <a asp-action="GetAllCompanies" asp-controller="Company"
+                   class="flex items-center rounded px-2 py-1 text-[#7A1515]
+                   hover:text-[#991b1b] hover:bg-gray-200 transition duration-200">
+                    <i class="fa fa-building mr-2"></i>
                     Companies
                 </a>
             </li>
-            <li class="py-2 text-[#7A1515]">
-                <a asp-action="GetAllJobsAdmin" asp-controller="Job" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 text-[#7A1515]@(ViewContext.RouteData.Values["Controller"].ToString() == "Job" ? "bg-gray-200" : "")">
-                    <i class="fa fa-suitcase mr-2 text-[#7A1515]"></i>
+            <li class="py-2">
+                <a asp-action="GetAllJobsAdmin" asp-controller="Job"
+                   class="flex items-center rounded px-2 py-1 text-[#7A1515]
+                   hover:text-[#991b1b] hover:bg-gray-200 transition duration-200">
+                    <i class="fa fa-suitcase mr-2"></i>
                     Jobs
                 </a>
             </li>
-            <li class="py-2 text-[#7A1515]">
-                <a asp-action="" asp-controller="" class="flex items-center rounded px-2 py-1 text-[#7A1515] hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Application" ? "bg-gray-200" : "")">
-                    <i class="fa fa-check-circle-o mr-2 text-[#7A1515]"></i>
+            <li class="py-2">
+                <a asp-action="" asp-controller=""
+                   class="flex items-center rounded px-2 py-1 text-[#7A1515]
+                   hover:text-[#991b1b] hover:bg-gray-200 transition duration-200">
+                    <i class="fa fa-check-circle-o mr-2"></i>
                     Applications
                 </a>
             </li>
@@ -62,19 +73,25 @@
         @if (isRecruiter)
         {
             <li class="py-2">
-                <a asp-action="" asp-controller="" class="flex items-center rounded px-2 py-1 text-[#7A1515] hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Company" ? "bg-gray-200" : "")">
+                <a asp-action="" asp-controller=""
+                   class="flex items-center rounded px-2 py-1 text-[#7A1515]
+                   hover:text-[#991b1b] hover:bg-gray-200 transition duration-200">
                     <i class="fa fa-building mr-2"></i>
                     Company
                 </a>
             </li>
             <li class="py-2">
-                <a asp-action="GetAllJobsRecruiter" asp-controller="Job" class="flex items-center rounded px-2 py-1 text-[#7A1515] hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Job" ? "bg-gray-200" : "")">
+                <a asp-action="GetAllJobsRecruiter" asp-controller="Job"
+                   class="flex items-center rounded px-2 py-1 text-[#7A1515]
+                   hover:text-[#991b1b] hover:bg-gray-200 transition duration-200">
                     <i class="fa fa-suitcase mr-2"></i>
                     Jobs
                 </a>
             </li>
             <li class="py-2">
-                <a asp-action="" asp-controller="" class="flex items-center rounded px-2 py-1 text-[#7A1515] hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Application" ? "bg-gray-200" : "")">
+                <a asp-action="" asp-controller=""
+                   class="flex items-center rounded px-2 py-1 text-[#7A1515]
+                   hover:text-[#991b1b] hover:bg-gray-200 transition duration-200">
                     <i class="fa fa-check-circle-o mr-2"></i>
                     Applications
                 </a>
@@ -85,14 +102,18 @@
         </li>
         @if (!isAdmin)
         {
-            <li class="py-2 text-[#7A1515]">
-                <a asp-action="" asp-controller="" class="flex items-center rounded px-2 py-1 text-[#7A1515] hover:bg-gray-200">
+            <li class="py-2">
+                <a asp-action="" asp-controller=""
+                   class="flex items-center rounded px-2 py-1 text-[#7A1515]
+                   hover:text-[#991b1b] hover:bg-gray-200 transition duration-200">
                     <i class="fa fa-cog mr-2"></i> Settings
                 </a>
             </li>
         }
-        <li class="py-2 text-[#7A1515]">
-            <a href="#" data-toggle="modal" data-target="#logoutModal" class="flex items-center rounded px-2 py-1 text-[#7A1515] hover:bg-gray-200">
+        <li class="py-2">
+            <a href="#" data-toggle="modal" data-target="#logoutModal"
+               class="flex items-center rounded px-2 py-1 text-[#7A1515]
+               hover:text-[#991b1b] hover:bg-gray-200 transition duration-200">
                 <i class="fa fa-sign-out mr-2"></i>
                 Log out
             </a>
@@ -102,18 +123,16 @@
         <i class="fa fa-user-circle mr-3 text-4xl text-[#7A1515]"></i>
         <div>
             <span>@HttpContextAccessor.HttpContext.User.Identity.Name</span>
-            @if (isSuper)
-            {
-                <div class="text-sm text-gray-500">
-                    (Super Admin)
-                </div>
-            }
-            else
-            {
-                <div class="text-sm text-gray-500">
-                    (@role)
-                </div>
-            }
+            <div class="text-sm text-gray-500">
+                @if (isSuper)
+                {
+                    <text>(Super Admin)</text>
+                }
+                else
+                {
+                    <text>(@role)</text>
+                }
+            </div>
         </div>
     </div>
 </div>
