--- a/WebApp/Views/Account/Login.cshtml
+++ b/WebApp/Views/Account/Login.cshtml
@@ -5,29 +5,33 @@
 
     await Html.RenderPartialAsync("_RegisterModal", new Services.ServiceModels.AccountServiceModel());
 }
-<div class="relative h-screen flex items-center justify-center">
-    <img src="~/img/loginBG.png" alt="loginBG" class="absolute inset-0 w-full h-full object-cover -z-10" />
+<div class="relative flex h-screen items-center justify-center">
+    <img src="~/img/loginBG.png" alt="loginBG" class="-z-10 absolute inset-0 h-full w-full object-cover" />
 
-    <div class="bg-white min-h-screen pt-14 text-[#7A1515] flex items-center w-full bg-opacity-0">
-        <form method="post" action="/Account/Login" id="loginForm" class="relative ml-28 flex flex-col p-8 bg-white rounded-md" style="max-width: 500px; width: 100%;">
-            <div class="text-left pb-0">
+    <div class="bg-opacity-0 flex min-h-screen w-full items-center bg-white pt-14 text-[#7A1515]">
+        <form method="post" action="/Account/Login" id="loginForm" class="relative ml-28 flex flex-col rounded-md bg-white p-8" style="max-width: 500px; width: 100%;">
+            <div class="pb-0 text-left">
                 <p class="text-4xl font-bold">Sign In</p>
             </div>
-            <div class="text-left text-black font-medium text-sm pb-3 subpixel-antialiased">
+            <div class="pb-3 text-left text-sm font-medium text-black subpixel-antialiased">
                 <p>Don't have an account? <a href="" class="text-[#7A1515] underline" data-toggle="modal" data-target="#registerUserModal">Create Account</a></p>
             </div>
             <div class="mb-3 text-black">
 
-                <label class="block text-[#7A1515] font-medium mb-1" for="emailInput">Email Address <span class="text-[#7A1515]">*</span></label>
+                <label class="mb-1 block font-medium text-[#7A1515]" for="emailInput">Email Address <span class="text-[#7A1515]">*</span></label>
                 <input type="email" asp-for="Email" id="emailInput" required
-                       class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-[#991b1b] focus:border-transparent hover:border-[#7A1515]" />
+                       class="w-full rounded-md border border-gray-300 p-2 hover:border-[#7A1515] focus:outline-none focus:ring-2 focus:ring-[#991b1b] focus:border-transparent" />
+            </div>
+            <div class="mb-4" style="display:none;">
+                <label asp-for="Username"></label>
+                <input asp-for="Username" />
             </div>
             <div class="mb-2 text-black">
-                <label class="text-[#7A1515] font-medium mb-1" for="passwordInput">Password <span class="text-[#7A1515]">*</span></label>
+                <label class="mb-1 font-medium text-[#7A1515]" for="passwordInput">Password <span class="text-[#7A1515]">*</span></label>
                 <div class="relative">
                     <input type="password" asp-for="Password" id="passwordInput" required
-                           class="w-full border border-gray-300 rounded-md p-2 pr-10 focus:outline-none focus:ring-2 focus:ring-[#991b1b] focus:border-transparent hover:border-[#7A1515]" />
-                    <button type="button" onclick="togglePasswordVisibility()" class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-500">
+                           class="w-full rounded-md border border-gray-300 p-2 pr-10 hover:border-[#7A1515] focus:outline-none focus:ring-2 focus:ring-[#991b1b] focus:border-transparent" />
+                    <button type="button" onclick="togglePasswordVisibility()" class="absolute inset-y-0 right-0 flex items-center pr-3 text-gray-500">
                         <!-- Eye Open Icon -->
                         <svg id="eyeOpenIcon" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
@@ -35,7 +39,7 @@
                                   d="M2.458 12C3.732 7.943 7.523 5 12 5s8.268 2.943 9.542 7c-1.274 4.057-5.065 7-9.542 7s-8.268-2.943-9.542-7" />
                         </svg>
                         <!-- Eye Closed Icon -->
-                        <svg id="eyeClosedIcon" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <svg id="eyeClosedIcon" xmlns="http://www.w3.org/2000/svg" class="hidden h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                   d="m9.75 14.25 4.5-4.5m-4.5 0 4.5 4.5M2.458 12C3.732 7.943 7.523 5 12 5s8.268 2.943 9.542 7c-1.274 4.057-5.065 7-9.542 7s-8.268-2.943-9.542-7" />
                         </svg>
@@ -43,17 +47,17 @@
                 </div>
                 @if (TempData["ErrorMessageLogin"] != null)
                 {
-                    <span class="text-[#7A1515] text-sm mt-1 block">@(TempData["ErrorMessageLogin"])</span>
+                    <span class="mt-1 block text-sm text-[#7A1515]">@(TempData["ErrorMessageLogin"])</span>
                 }
             </div>
 
-            <div class="text-right text-black font-medium text-sm">
+            <div class="text-right text-sm font-medium text-black">
                 <p><a href="" class="text-[#7A1515]" data-toggle="modal" data-target="#resetPasswordModal">Forgot Password?</a></p>
             </div>
 
             <div>
                 <button type="submit" id="loginButton" disabled
-                        class="mt-2 bg-[#7A1515] hover:bg-[#7A1515] text-white font-semibold py-2 px-4 rounded w-full flex justify-center items-center disabled:bg-gray-400 disabled:cursor-not-allowed">
+                        class="mt-2 flex w-full items-center justify-center rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#7A1515] disabled:bg-gray-400 disabled:cursor-not-allowed">
                     Sign in
                 </button>
             </div>
