Modified Admin Management-Frontend

--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     {
         @Html.Partial("_Header")
     }
-    <div class="layout">
+    <div class="layout bg-[#F5F7F8]">
         @if (!User.IsInRole("Applicant"))
         {
             @Html.Partial("_Sidebar")
