--- a/WebApp/Views/Shared/_DeleteModal.cshtml
+++ b/WebApp/Views/Shared/_DeleteModal.cshtml
@@ -14,8 +14,8 @@
                 Are you sure you want to delete this item?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" id="confirmDeleteBtn">Delete</button>
+                <button type="button" class="bg-[#6c757d] text-white font-medium px-3 py-2 rounded-md hover:bg-[#939BA2]" data-dismiss="modal">Cancel</button>
+                <button type="button" class="bg-[#7A1515] text-white font-medium px-3 py-2 rounded-md hover:bg-[#A53D3D]" id="confirmDeleteBtn">Delete</button>
             </div>
         </div>
     </div>
