--- a/WebApp/Views/User/_EditUserModal.cshtml
+++ b/WebApp/Views/User/_EditUserModal.cshtml
@@ -9,7 +9,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="editUserModalLabel">Update User</h5>
+                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="editUserModalLabel">Update User</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -66,8 +66,8 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" onclick="submitEditUser()">Save changes</button>
+                <button type="button" class="bg-[#6c757d] text-white font-medium px-3 py-2 rounded-md hover:bg-[#939BA2]" data-dismiss="modal">Cancel</button>
+                <button type="button" class="bg-[#7A1515] text-white font-medium px-3 py-2 rounded-md hover:bg-[#A53D3D]" onclick="submitEditUser()">Save changes</button>
             </div>
         </div>
     </div>
